Fix demo names and some typos
Signed-off-by: Ping Xie <pingxie@google.com>

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valkey VSS Demo</title>
+    <title>Valkey-Search Demo</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="{{ url_for('home') }}">Valkey VSS Demo</a>
+            <a href="{{ url_for('home') }}">Valkey-Search Demo</a>
         </div>
         {% if user %}
         <div class="header-right">
